Update 'test-nov8' component image to: quay.io/test-jdubrick-org/test-nov8:61e4f4125f939ba4d041a48ad2f41c9af60f1668@sha256:26daeda5b69d291eecceb1c00786c5a51a8a6d39572c6181ff6d13abbb2b2bb2

--- a/components/test-nov8/overlays/development/deployment-patch.yaml
+++ b/components/test-nov8/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: test-nov8
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/test-jdubrick-org/test-nov8:61e4f4125f939ba4d041a48ad2f41c9af60f1668@sha256:26daeda5b69d291eecceb1c00786c5a51a8a6d39572c6181ff6d13abbb2b2bb2 # use pre-built to bootstrap 
+          name: app-inference
